--- a/src/app/main/home/app-movie/app-movie.component.html
+++ b/src/app/main/home/app-movie/app-movie.component.html
@@ -1,5 +1,5 @@
 
-<div class="app-movie" style="background-image: url('assets/img/backapp.jpg');">
+<div class="app-movie" style="background-image: url('assets/img/backapp.jpg');" id="appcuaTix">
     <div class="app-movie-information">
         <div class="app-tittle">
             <h1>Ứng dụng tiện lợi dành cho người yêu điện ảnh</h1>
