--- a/src/app/main/home/carousel/carousel.component.scss
+++ b/src/app/main/home/carousel/carousel.component.scss
@@ -1,5 +1,6 @@
 .carousel {
     position: relative;
+    padding-top: 28px;
     .carousel-indicators {
         position: absolute;
         bottom: 80px;
