--- a/src/app/main/home/movie-list/movie-list.component.html
+++ b/src/app/main/home/movie-list/movie-list.component.html
@@ -5,7 +5,7 @@
 </div> -->
 
 
-<div class="container">
+<div class="container" id="lichchieuphimcuaTix">
    <h1>Phim đang chiếu</h1>
 
    <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig">
