--- a/src/app/main/home/news/news.component.html
+++ b/src/app/main/home/news/news.component.html
@@ -1,4 +1,4 @@
-<div class="news container">
+<div class="news container" id="tintuccuaTix">
     <h1>Tin tức</h1>
     <nav>
         <div class="nav nav-tabs news-tabs" id="nav-tab" role="tablist">
@@ -20,7 +20,7 @@
                     </a>
 
                     <div class="new-best-body">
-                        <a href="https://tix.vn/goc-dien-anh/7960-boc-tem-to-hop-giai-tri-moi-toanh-cua-gioi-ha-thanh">
+                        <a href="https://tix.vn/goc-dien-anh/7961-khai-truong-rap-xin-gia-ngon-chuan-xi-tai-sai-gon">
                             <h4>Khai trương rạp xịn giá ngon, chuẩn xì-tai Sài Gòn</h4>
                         </a>
 
@@ -54,7 +54,7 @@
                     </a>
 
                     <div class="new-best-body">
-                        <a href="">
+                        <a href="https://tix.vn/goc-dien-anh/7960-boc-tem-to-hop-giai-tri-moi-toanh-cua-gioi-ha-thanh">
                             <h4>“Bóc tem” tổ hợp giải trí mới toanh của giới Hà Thành</h4>
                         </a>
                         <p>Vào đúng ngày Nhà giáo Việt Nam 20/11, khu vui chơi sống ảo độc-lạ-chill nhất từ trước đến
