--- a/src/app/main/home/app-movie/app-movie.component.scss
+++ b/src/app/main/home/app-movie/app-movie.component.scss
@@ -59,6 +59,7 @@
            }
             img{
                 border-radius: 30px;
+                border: 4px solid black;
             }
         }
     }
