--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,6 @@
 <app-carousel></app-carousel>
 <app-book></app-book>
 <app-movie-list></app-movie-list>
+<app-theater></app-theater>
 <app-news></app-news>
 <app-app-movie></app-app-movie>
