--- a/src/app/main/home/movie-list/movie-list.component.scss
+++ b/src/app/main/home/movie-list/movie-list.component.scss
@@ -6,7 +6,8 @@
     // height: auto;
     .movie-list {
         height: 400px;
-        background-color: #f1f1f1;
+        // background-color: #d6bebe;
+        background: linear-gradient(to right,#a09d9d , #e4acac );
         // border: 1px solid black;
         padding: 10px;
         // width: 23%;
@@ -26,6 +27,7 @@
     .movie-img {
         display: flex;
         position: relative;
+        // overflow: hidden;
         .overlay {
             position: absolute;
             background-color: black;
@@ -38,9 +40,11 @@
             opacity: 0.6;
             transition: 0.5s;
         }
-        &:hover img {
-            scale: 1.4;
-        }
+        // &:hover img {
+        //     // -webkit-transform:scale(1.1); transform:scale(1.1);
+        //     // transform: 0.5s;
+            
+        // }
         .movie-detail {
             position: absolute;
             top: 50%;
