--- a/src/app/main/main-layout/main-layout.component.html
+++ b/src/app/main/main-layout/main-layout.component.html
@@ -12,16 +12,16 @@
         
         <ul class="navbar-nav header-content mt-2 mt-lg-0 col-6">
             <li class="nav-item active">
-                <a class="nav-link btn-2" href="#">Lịch chiếu </a>
+                <a class="nav-link btn-2" href="#lichchieuphimcuaTix">Lịch chiếu </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link btn-2" href="#">Cụm rạp</a>
+                <a class="nav-link btn-2" href="#cumRapCuaTix">Cụm rạp</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link btn-2" href="#">Tin Tức </a>
+                <a class="nav-link btn-2" href="#tintuccuaTix">Tin Tức </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link btn-2" href="#">Ứng dụng</a>
+                <a class="nav-link btn-2" href="#appcuaTix">Ứng dụng</a>
             </li>
 
 
@@ -30,7 +30,7 @@
             <form class="form-inline my-2 my-lg-0 mr-4">
                 <input class="form-control mr-sm-2" type="search" placeholder="Tìm phim" aria-label="Search">
               </form>
-            <li *ngIf="currentuser" class="notification nav-item dropdown">
+            <li *ngIf="currentUser" class="notification nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     <i class="material-icons">
@@ -38,16 +38,14 @@
                     </i>
                 </a>
                 <div class="dropdown-menu thongbao" style="width: 250px" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="#">Bạn chưa có thông báo nào</a>
-                   
+                    <a class="dropdown-item" href="#">Bạn chưa có thông báo nào</a>                  
                 </div>
-
             </li>
-            <li *ngIf="currentuser" class="profile nav-item dropdown">
+            <li *ngIf="currentUser" class="profile nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">             
-                    Xin chào {{detailuser.taiKhoan}} 
-                    <img src="assets/img/Taylor-Lautner-1024x683.jpg" alt="">
+                    Xin chào {{currentUser?.taiKhoan}} 
+                    <img src="assets/img/comment0.jpg" alt="">
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <a class="dropdown-item" href="#">Thông tin cá nhân</a>
@@ -56,14 +54,14 @@
                     <a class="dropdown-item" href="/" (click)="logOut()">Đăng xuất</a>
                 </div>
             </li>
-            <li *ngIf="!currentuser" class="nav-item active signin">
+            <li *ngIf="!currentUser" class="nav-item active signin">
 
                 <a class="nav-link btn-2" routerLink="signin">
                     <img src="assets/img/baseline_person_black_18dp.png" alt="">
                     Đăng nhập
                 </a>
             </li>
-            <li *ngIf="!currentuser" class="nav-item active signup">
+            <li *ngIf="!currentUser" class="nav-item active signup">
 
                 <a class="nav-link btn-2" routerLink="signup">
                     <img src="assets/img/more_vert-white-18dp.svg" alt="">
